--- a/src/jvmMain/resources/application.conf
+++ b/src/jvmMain/resources/application.conf
@@ -5,6 +5,6 @@ ktor {
         port = ${?PORT}
     }
     application {
-        modules = [ server.application.ServerKt.module ]
+        modules = [ kuyanov.kotline.server.ServerKt.module ]
     }
 }
